Added some Changes for Logging, Functionalty woks as intended